--- a/src/components/MindNode/MindNode.less
+++ b/src/components/MindNode/MindNode.less
@@ -1,19 +1,35 @@
 @border-width: 3px; // Link line 宽度，建议为偶数
-@border-color: #e05250;
+// @border-color: #e05250;
 
-@node-border-radius: 12px;
+@node-border-radius: 10px;
 @node-spacing-width: 20px;    // Node 水平间隔
 @node-spacing-height: 10px;   // Node 竖直间隔
 
 @link-line-cap-radius: 8px;   // Link Line 连接处弯曲半径
+
+// color
+@color-code-bg: rgba(27, 31, 35, 0.05);
+@color-code-font: #e05250;
+@color-strong-font: #e05250;
 
 .mind-node {
   display: flex;
   align-items: center;
   position: relative;
 
+  --color-node-border: #e05250;
+
+  // Node Boarder Theme
+  &.gold, &.gold & {
+    --color-node-border: gold;
+  }
+
+  // .mind-node.gold, .mind-node.gold .mind-node {
+
+  // }
+
   &-body {
-    border: @border-width solid @border-color;
+    border: @border-width solid var(--color-node-border);
     border-radius: @node-border-radius;
     margin: @node-spacing-height @node-spacing-width;
     padding: 0.6em 1em;
@@ -36,6 +52,10 @@
       &-item {
         white-space: pre;
         line-height: 1.8em;
+
+        & > p {
+          margin: 0;
+        }
       }
     }
   }
@@ -49,7 +69,7 @@
       position: absolute;
       height: @border-width;
       width: @node-spacing-width;
-      background: @border-color;
+      background: var(--color-node-border);
       top: 50%;
       transform: translateY(-@border-width / 2);
       left: -@node-spacing-width;
@@ -67,7 +87,7 @@
       height: 100%;
       position: absolute;
       left: 0;
-      background: @border-color;
+      background: var(--color-node-border);
       transform: translateX(-50%);
     }
   }
@@ -81,9 +101,9 @@
     //left: -@node-spacing-width - @border-width;
     width: @node-spacing-width;
     height: @border-width;
-    background: @border-color;
+    background: var(--color-node-border);
     //right: -@node-spacing-width - @border-width;
-    //border: @border-width / 2 solid @border-color;
+    //border: @border-width / 2 solid var(--color-node-border);
     transform: translateY(-50%);
     top: 50%;
     //width: @node-spacing-width;
@@ -98,7 +118,7 @@
       //bottom: -@node-spacing-height - @border-width * 2;
       //transform: translate(-@border-width / 2);
       transform: translate(-@border-width / 2, @border-width / 2);
-      border: @border-width solid @border-color;
+      border: @border-width solid var(--color-node-border);
       border-bottom: 0 transparent;
       border-right: 0 transparent;
       border-top-left-radius: @link-line-cap-radius;
@@ -113,7 +133,7 @@
       //top: -@node-spacing-height - @border-width * 2;
       top: 0 - @border-width;
       transform: translate(-@border-width / 2, @border-width / 2);
-      border: @border-width solid @border-color;
+      border: @border-width solid var(--color-node-border);
       border-top: 0 transparent;
       border-right: 0 transparent;
       border-bottom-left-radius: @link-line-cap-radius;
@@ -126,5 +146,22 @@
         content: unset;
       }
     }
+  }
+}
+
+// Markdown 格式相关
+.mind-node {
+  code {
+    background: @color-code-bg;
+    padding: 0.3em 0.6em;
+    border-radius: 6px;
+    color: @color-code-font;
+    vertical-align: middle;
+    font-family: "Fira Code";
+    font-size: 0.8em;
+  }
+
+  b {
+    color: @color-strong-font;
   }
 }
