feat: 优化「导出图片」细节.

--- a/src/components/MindNode/MindNode.less
+++ b/src/components/MindNode/MindNode.less
@@ -20,6 +20,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  width: fit-content;
 
   --color-node-primary: #e05250;
   --color-node-border: var(--color-node-primary);
