feat: 脑图展示区域样式优化.

--- a/src/components/MindNode/MindNode.less
+++ b/src/components/MindNode/MindNode.less
@@ -26,6 +26,10 @@
   --color-node-border: var(--color-node-primary);
   --color-node-font: var(--color-node-primary);
 
+  &.root-node {
+    margin: 0 auto;
+  }
+
   // 彩色主题
   &.rainbow {
     & > .mind-node-children {
