--- a/src/container/MindMap/MindMap.less
+++ b/src/container/MindMap/MindMap.less
@@ -1,6 +1,6 @@
 @import "../../style/index";
 
-.mind-map-container {
+.mind-map-card {
   position: relative;
   overflow: hidden;
   //overflow: auto;
@@ -11,5 +11,9 @@
   .ant-card-body {
     flex: 1;
     overflow: auto;
+  }
+
+  .mind-map-container {
+    display: flex;
   }
 }
