--- a/src/App.less
+++ b/src/App.less
@@ -6,7 +6,7 @@
   overflow: hidden;
   padding: @spacing-between;
 
-  .mind-map-container {
+  .mind-map-card {
     margin-left: @spacing-between !important;
     margin-right: 0 !important;
   }
@@ -14,7 +14,7 @@
   &.layout-reverse {
     flex-direction: row-reverse;
 
-    .mind-map-container {
+    .mind-map-card {
       margin-right: @spacing-between !important;
       margin-left: 0 !important;
     }
