feat: 添加编辑器快宽度拖拽功能.

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,1 +1,11 @@
-@spacing-between: 10px;
+html, body {
+  font-family: "Fira Code";
+  margin: 0;
+  //background: #333;
+
+  --spacing-between: 15px;
+}
+
+#root {
+  height: 100%;
+}
