--- a/src/App.less
+++ b/src/App.less
@@ -1,13 +1,11 @@
-@import "./style/index";
-
 .mind-note-app-container {
   height: 100%;
   display: flex;
   overflow: hidden;
-  padding: @spacing-between;
+  padding: var(--spacing-between);
 
   .mind-map-card {
-    margin-left: @spacing-between !important;
+    margin-left: var(--spacing-between) !important;
     margin-right: 0 !important;
   }
 
@@ -15,8 +13,20 @@
     flex-direction: row-reverse;
 
     .mind-map-card {
-      margin-right: @spacing-between !important;
+      margin-right: var(--spacing-between) !important;
       margin-left: 0 !important;
+    }
+  }
+
+  .markdown-editor-drag-sizing {
+    transition: background 0.25s;
+    display: flex;
+    align-items: center;
+    &:hover {
+      background: #f5f5f5;
+    }
+    &::before {
+      color: #ccc;
     }
   }
 }
