--- a/src/components/MarkdownEditor/MarkdownEditor.less
+++ b/src/components/MarkdownEditor/MarkdownEditor.less
@@ -1,1 +1,16 @@
 @import "../../style/index";
+
+.markdown-editor-drag-sizing {
+  transition: background 0.25s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover,
+  &:active {
+    background: #f5f5f5;
+  }
+  &::before {
+    color: #ccc;
+  }
+}
