feat: 支持实时保存本地笔记，样式优化

--- a/src/components/MarkdownEditor/MarkdownEditor.less
+++ b/src/components/MarkdownEditor/MarkdownEditor.less
@@ -14,3 +14,12 @@
     color: #ccc;
   }
 }
+
+.tui-editor-defaultUI {
+  border-color: #f0f0f0 !important;
+  border-radius: 2px;
+
+  .te-toolbar-section {
+    border-color: #f0f0f0 !important;
+  }
+}
