--- a/src/container/MindMap/MindMapToolbar/MindMapToolbar.less
+++ b/src/container/MindMap/MindMapToolbar/MindMapToolbar.less
@@ -1,3 +1,14 @@
+.mind-map-toolbar {
+  flex-wrap: wrap;
+  .ant-checkbox + span {
+    padding-right: 0;
+  }
+
+  .ant-space-item {
+    margin-left: auto;
+  }
+}
+
 .tool-bar-last-modified-time {
   color: #ccc;
 }
