--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,11 +1,16 @@
+@import '~antd/dist/antd.less';
+
 html, body {
   font-family: "Fira Code";
   margin: 0;
-  //background: #333;
-
-  --spacing-between: 15px;
+  background: #f9f9f9;
 }
 
 #root {
   height: 100%;
+}
+
+:root {
+  --spacing-between: 15px;
+  --color-primary: #e05250;
 }
