--- a/src/container/MindMap/MindMap.less
+++ b/src/container/MindMap/MindMap.less
@@ -8,6 +8,10 @@
   display: flex;
   flex-direction: column;
 
+  .ant-card-head-title {
+    flex: 1 0 auto;
+  }
+
   .ant-card-body {
     flex: 1;
     overflow: auto;
@@ -15,5 +19,7 @@
 
   .mind-map-container {
     display: flex;
+    min-height: 100%;
+    justify-content: center;
   }
 }
